<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            android:fontFamily="@font/f1"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/menu_setting"
            android:fontFamily="@font/f1"/>
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/alarm"
            android:title="@string/menu_alarm"
            android:fontFamily="@font/f1"/>

        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favorite"
            android:title="@string/menu_favourite"
            android:fontFamily="@font/f1"/>
    </group>
</menu>