<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/mapAlarm"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.theweather.ui.home.view.HomeFragment"
        android:fontFamily="@font/f1"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="myFullLocationInfo"
            android:defaultValue="null"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.theweather.ui.setting.Setting"
        android:fontFamily="@font/f1"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_nav_setting_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_setting_to_settingMapFragment"
            app:destination="@id/settingMapFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_alarm"
        android:name="com.example.theweather.ui.alarm.view.AlarmFragment"
        android:fontFamily="@font/f1"
        android:label="@string/menu_alarm"
        tools:layout="@layout/fragment_alarm">
        <action
            android:id="@+id/action_nav_alarm_to_mapsAlarmFragment"
            app:destination="@id/mapsAlarmFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.theweather.favourite.view.FavouriteFragment"
        android:fontFamily="@font/f1"
        android:label="@string/fav_fragment"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_nav_favourite_to_mapsFavouriteFragment"
            app:destination="@id/mapsFavouriteFragment" />
        <action
            android:id="@+id/action_nav_favourite_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/mapsFavouriteFragment"
        android:name="com.example.theweather.favourite.view.MapsFavouriteFragment"
        android:fontFamily="@font/f1"
        android:label="@string/map_favourite"
        tools:layout="@layout/fragment_maps_favourite">
        <action
            android:id="@+id/action_mapsFavouriteFragment_to_nav_favourite"
            app:destination="@id/nav_favourite" />
    </fragment>
    <fragment
        android:id="@+id/settingMapFragment"
        android:name="com.example.theweather.ui.setting.SettingMapFragment"
        android:fontFamily="@font/f1"
        android:label="@string/map_setting"
        tools:layout="@layout/fragment_setting_map">
        <action
            android:id="@+id/action_settingMapFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/mapsAlarmFragment"
        android:name="com.example.theweather.ui.alarm.view.MapsAlarmFragment"
        tools:layout="@layout/fragment_maps_alarm">
        <action
            android:id="@+id/action_mapsAlarmFragment_to_nav_alarm"
            app:destination="@id/nav_alarm" />
    </fragment>
</navigation>