<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.Setting">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CD588B9A">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#03A9F4"
                            android:backgroundTint="#03A9F4"
                            android:fontFamily="@font/f1"
                            android:padding="8dp"
                            android:text="@string/tv_lang"
                            android:textColor="#000000" />

                        <View
                            android:id="@+id/divider1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <RadioGroup
                            android:id="@+id/rg_languages"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rb_arabic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_arabic" />

                            <RadioButton
                                android:id="@+id/rb_english"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_english" />
                        </RadioGroup>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#03A9F4"
                            android:backgroundTint="#03A9F4"
                            android:fontFamily="@font/f1"
                            android:padding="8dp"
                            android:text="@string/tv_locations"
                            android:textColor="#000000" />

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <RadioGroup
                            android:id="@+id/rg_locations"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rb_gps"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_gps" />

                            <RadioButton
                                android:id="@+id/rb_map"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_map" />
                        </RadioGroup>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#03A9F4"
                            android:backgroundTint="#03A9F4"
                            android:fontFamily="@font/f1"
                            android:padding="8dp"
                            android:text="@string/tv_temperature"
                            android:textColor="#000000" />

                        <View
                            android:id="@+id/divider3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <RadioGroup
                            android:id="@+id/rg_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rb_celicious"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_celsius" />

                            <RadioButton
                                android:id="@+id/rb_kelvin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_kelvin" />

                            <RadioButton
                                android:id="@+id/rb_fehrenhayt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_fahrenheit" />
                        </RadioGroup>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_windSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#03A9F4"
                            android:backgroundTint="#03A9F4"
                            android:fontFamily="@font/f1"
                            android:padding="8dp"
                            android:text="@string/tv_windSpeed"
                            android:textColor="#000000" />

                        <View
                            android:id="@+id/divider4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <RadioGroup
                            android:id="@+id/rg_windSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rb_meterSec"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_mSec" />

                            <RadioButton
                                android:id="@+id/rb_mileHour"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_milehour" />
                        </RadioGroup>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_notification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#03A9F4"
                            android:backgroundTint="#03A9F4"
                            android:fontFamily="@font/f1"
                            android:padding="8dp"
                            android:text="@string/tv_notification"
                            android:textColor="#000000" />

                        <View
                            android:id="@+id/divider5"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <RadioGroup
                            android:id="@+id/rg_notofications"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rb_enableNotofication"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_enable" />

                            <RadioButton
                                android:id="@+id/rb_disableNotofication"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/f1"
                                android:text="@string/rb_disable" />
                        </RadioGroup>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>