<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.view.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CD588B9A"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_dayweather"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_margin="10dp"
            android:elevation="8dp"

            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#469597">

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_TodayTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintStart_toStartOf="@+id/tv_TodayDisc"
                    app:layout_constraintTop_toBottomOf="@+id/tv_TodayDisc" />

                <TextView
                    android:id="@+id/tv_TodayDisc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintStart_toStartOf="@+id/tv_location"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_toDayWeatherConditionImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="#469597"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.393"
                    tools:src="@tools:sample/avatars" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hourlyTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_weeklyforecast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="#469597">

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintEnd_toEndOf="@+id/imageView7"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/pressure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/f1"
                    android:text="@string/pressure"
                    app:layout_constraintEnd_toEndOf="@+id/tv_pressure"
                    app:layout_constraintStart_toStartOf="@+id/tv_pressure"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/wind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/f1"
                    android:text="@string/windSpeed"
                    app:layout_constraintEnd_toEndOf="@+id/tv_windSpeed"
                    app:layout_constraintStart_toStartOf="@+id/tv_windSpeed"
                    app:layout_constraintTop_toBottomOf="@+id/tv_windSpeed" />

                <TextView
                    android:id="@+id/tv_windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintEnd_toEndOf="@+id/imageView8"
                    app:layout_constraintStart_toStartOf="@+id/imageView8"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/humidity"
                    app:layout_constraintEnd_toStartOf="@+id/imageView8"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/f1"
                    android:text="@string/humidity"
                    app:layout_constraintEnd_toEndOf="@+id/tv_humidity"
                    app:layout_constraintStart_toStartOf="@+id/tv_humidity"
                    app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintEnd_toEndOf="@+id/imageView9"
                    app:layout_constraintStart_toStartOf="@+id/imageView9"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="42dp"
                    android:src="@drawable/cloud"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/tv_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintEnd_toEndOf="@+id/imageView10"
                    app:layout_constraintStart_toStartOf="@+id/imageView10"
                    app:layout_constraintTop_toBottomOf="@+id/imageView10" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/f1"
                    android:text="@string/cloud"
                    app:layout_constraintEnd_toEndOf="@+id/imageView10"
                    app:layout_constraintStart_toStartOf="@+id/imageView10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cloud" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="42dp"
                    android:src="@drawable/feels_like"
                    app:layout_constraintEnd_toStartOf="@+id/imageView12"
                    app:layout_constraintStart_toEndOf="@+id/imageView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/visability"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/tv_feelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintEnd_toEndOf="@+id/imageView11"
                    app:layout_constraintStart_toStartOf="@+id/imageView11"
                    app:layout_constraintTop_toBottomOf="@+id/imageView11" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/f1"
                    android:text="@string/feelsLike"
                    app:layout_constraintEnd_toEndOf="@+id/tv_feelsLike"
                    app:layout_constraintStart_toStartOf="@+id/tv_feelsLike"
                    app:layout_constraintTop_toBottomOf="@+id/tv_feelsLike" />

                <TextView
                    android:id="@+id/tv_visability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/f1"
                    app:layout_constraintEnd_toEndOf="@+id/imageView12"
                    app:layout_constraintStart_toStartOf="@+id/imageView12"
                    app:layout_constraintTop_toBottomOf="@+id/imageView12" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/f1"
                    android:text="@string/visability"
                    app:layout_constraintEnd_toEndOf="@+id/tv_visability"
                    app:layout_constraintStart_toStartOf="@+id/tv_visability"
                    app:layout_constraintTop_toBottomOf="@+id/tv_visability" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>